# sunsin-lunch

./: Main.py  README.md  env.dummy  pyproject.toml
note/: endpoints.ipynb  pandasql.ipynb
pages/: 1_Insert.py  2_Select.py  3_Statistics.py  4_Without.py  5_Api.py  6_Sync.py
src/sunsin_lunch/: db.py
